fix repo go back

--- a/src/App/pages/ItemPage/components/Title/Title.module.scss
+++ b/src/App/pages/ItemPage/components/Title/Title.module.scss
@@ -6,7 +6,9 @@
   align-items: center;
   gap: $space-m;
 
-  & .link {
+  & .back {
+    cursor: pointer;
+
     svg {
       display: block;
       color: $brand;
