--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -4,7 +4,7 @@
   border: none;
   outline: none;
   cursor: pointer;
-  height: 52px;
+  // height: 52px;
 
   display: flex;
   flex-direction: row;
