--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -7,7 +7,7 @@
   display: flex;
   justify-content: center;
   background-color: $bg-color;
-  border-bottom: 2px solid #d9d9d9;
+  border-bottom: 2px solid $gray;
 
   & .content {
     display: flex;
@@ -27,11 +27,5 @@
     &:hover {
       color: $text-accent;
     }
-  }
-
-  & .avatar {
-    width: 32px;
-    height: 32px;
-    border-radius: 50%;
   }
 }
