--- a/src/App/pages/ItemPage/components/Title/Title.module.scss
+++ b/src/App/pages/ItemPage/components/Title/Title.module.scss
@@ -21,6 +21,18 @@
     }
   }
 
+  & .link {
+    transition: opacity 0.25s ease-in-out;
+    
+    & img {
+      display: block;
+    }
+
+    &:hover {
+      opacity: 0.75;
+    }
+  }
+
   & .avatar {
     width: 40px;
     height: 40px;
