--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -61,3 +61,8 @@ $link-color-hover: #0969da;
 $topic-bg: #daedff;
 $topic-color: #0066cc;
 $topic-bg-hover: #0969da;
+
+$breakpoint-s: 480px;
+$breakpoint-m: 768px;
+$breakpoint-l: 1024px;
+$breakpoint-xl: 1280px;
