--- a/src/App/pages/ListPage/ListPage.module.scss
+++ b/src/App/pages/ListPage/ListPage.module.scss
@@ -29,3 +29,27 @@
   align-items: center;
   gap: $space-s;
 }
+
+@media (max-width: $breakpoint-s) {
+  .list {
+    gap: $space-xl;
+  }
+
+  .filter {
+    width: 100%;
+  }
+
+  .search {
+    flex-direction: column;
+
+    & button {
+      width: 100%;
+    }
+  }
+}
+
+@media (max-width: $breakpoint-m) {
+  .list {
+    gap: $space-l;
+  }
+}
