--- a/src/App/pages/ListPage/components/Card/Card.module.scss
+++ b/src/App/pages/ListPage/components/Card/Card.module.scss
@@ -10,6 +10,8 @@
   gap: $space-xl;
   background-color: $card-bg;
   cursor: pointer;
+  border-radius: $border-radius;
+  overflow: hidden;
 
   &:hover {
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
