--- a/src/App/pages/ListPage/components/Pagination/Pagination.module.scss
+++ b/src/App/pages/ListPage/components/Pagination/Pagination.module.scss
@@ -7,6 +7,7 @@
   flex-wrap: wrap;
 
   & .button {
+    border-radius: $border-radius;
     display: flex;
     flex-direction: column;
     justify-content: center;
