--- a/src/App/pages/ItemPage/components/Counts/Counts.module.scss
+++ b/src/App/pages/ItemPage/components/Counts/Counts.module.scss
@@ -15,6 +15,7 @@
     line-height: 18px;
     color: $text-secondary;
     text-decoration: none;
+    transition: color 0.25s ease-in-out;
 
     &:hover {
       color: $link-color-hover;
