--- a/src/App/pages/ItemPage/components/Contributors/Contributors.module.scss
+++ b/src/App/pages/ItemPage/components/Contributors/Contributors.module.scss
@@ -48,6 +48,7 @@
       font-size: 16px;
       line-height: 20px;
       color: $black;
+      transition: color 0.25s ease-in-out;
     }
 
     &:hover {
