--- a/src/App/pages/ListPage/components/Card/Card.module.scss
+++ b/src/App/pages/ListPage/components/Card/Card.module.scss
@@ -12,6 +12,7 @@
   cursor: pointer;
   border-radius: $border-radius;
   overflow: hidden;
+  transition: box-shadow 0.25s ease-in-out;
 
   &:hover {
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
