--- a/src/App/pages/ListPage/ListPage.module.scss
+++ b/src/App/pages/ListPage/ListPage.module.scss
@@ -14,7 +14,8 @@
 .loading {
   padding: $space-xl 0;
   display: flex;
-  justify-content: center;
+  flex-wrap: wrap;
+  gap: 80px;
 }
 
 .filter {
