fix theme color

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,15 +4,16 @@ $gray: #d9d9d9;
 $bg-color: #f6f8fa;
 
 $border-radius: 6px;
-$brand: #1f883d;
-$brand-hover: rgba(31, 136, 61, 0.7);
-$brand-active: #08531d;
+$brand: #454cee;
+$brand-hover: rgba(69, 76, 238, 0.7);
+$brand-active: #26325c;
 $space-xl: 24px;
 $space-l: 20px;
 $space-m: 16px;
 $space-s: 14px;
 $space-xs: 12px;
 $space-xxs: 8px;
+$space-xxxs: 4px;
 
 $loader-bg: $brand;
 
