fix not found text

--- a/src/App/pages/ListPage/ListPage.module.scss
+++ b/src/App/pages/ListPage/ListPage.module.scss
@@ -19,12 +19,13 @@
 }
 
 .filter {
+  margin-top: $space-xl;
   width: 300px;
   color: $text-secondary;
 }
 
 .search {
-  margin-top: $space-m;
+  margin-top: $space-xl;
   width: 100%;
   display: flex;
   align-items: center;
@@ -33,6 +34,7 @@
 
 .clear {
   font-size: 20px;
+  line-height: 28px;
   text-align: center;
 }
 
@@ -56,10 +58,12 @@
   }
 
   .filter {
+    margin-top: $space-m;
     width: 100%;
   }
 
   .search {
+    margin-top: $space-s;
     flex-direction: column;
 
     & button {
