--- a/src/App/pages/ListPage/components/Pagination/Pagination.module.scss
+++ b/src/App/pages/ListPage/components/Pagination/Pagination.module.scss
@@ -47,3 +47,18 @@
     }
   }
 }
+
+@media (max-width: $breakpoint-s) {
+  .pagination {
+    & .button {
+      padding: $space-xxs $space-xs;
+      font-size: $space-m;
+      line-height: 18px;
+    }
+
+    & svg {
+      width: 24px;
+      height: 24px;
+    }
+  }
+}
