--- a/src/App/pages/ListPage/components/Card/Card.module.scss
+++ b/src/App/pages/ListPage/components/Card/Card.module.scss
@@ -50,38 +50,68 @@
     gap: $space-xl;
   }
 
+  & .bottom {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: $space-xs;
+
+    & p {
+      -webkit-line-clamp: 3;
+      display: -webkit-box;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+    }
+  }
+
   & .star {
     display: flex;
     flex-direction: row;
     align-items: center;
     gap: $space-xxs;
   }
-
-  & .bottom {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0px;
-    gap: $space-xxs;
-  }
 }
 
-@media (max-width: $breakpoint-s) {
+@media (max-width: $breakpoint-m) {
   .card {
+    padding: 0;
     width: 100%;
     height: auto;
+    flex-direction: row;
     min-height: auto;
     gap: $space-m;
 
     & .image {
-      width: 100%;
-      height: 200px;
+      width: 120px;
+      height: 120px;
     }
 
     & .content {
       width: 100%;
+      justify-content: space-between;
+    }
+
+    & .content {
+      padding: $space-m;
+      gap: $space-l;
+    }
+
+    & .bottom {
+      flex-direction: column;
+      align-items: flex-start;
+      gap: $space-xxs;
+
+      & p {
+        -webkit-line-clamp: 1;
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+      }
+    }
+
+    & .top {
+      gap: $space-xxs;
+      order: 2;
     }
   }
 }
