--- a/src/components/Skeleton/Skeleton.module.scss
+++ b/src/components/Skeleton/Skeleton.module.scss
@@ -19,3 +19,12 @@
 .animate-pulse {
   animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
 }
+
+@media (max-width: $breakpoint-m) {
+  .skeleton {
+    &.card {
+      width: 100%;
+      height: 150px;
+    }
+  }
+}
