--- a/src/App/pages/ItemPage/components/Homepage/Homepage.module.scss
+++ b/src/App/pages/ItemPage/components/Homepage/Homepage.module.scss
@@ -3,10 +3,10 @@
 .link {
   display: flex;
   align-items: center;
-  gap: $space-xxs;
+  gap: var(--space-xxs);
 
   & a {
-    color: $link-color;
+    color: var(--link-color);
     font-weight: 700;
     text-decoration: none;
   }
