--- a/src/App/pages/ItemPage/components/Readme/Readme.module.scss
+++ b/src/App/pages/ItemPage/components/Readme/Readme.module.scss
@@ -1,24 +1,25 @@
 @import "styles/variables";
 
 .readme {
-  border: 1px solid $gray;
+  border: 1px solid var(--gray);
   border-radius: 4px;
   position: relative;
   overflow: auto;
+  color: var(--text-primary);
 
   & .title {
     padding: 16px;
     font-weight: 700;
     font-size: 12px;
     line-height: 14px;
-    color: $black;
+    color: var(--text-primary);
   }
 
   & .content {
     padding: 32px;
 
     & > * {
-      margin-bottom: $space-xs;
+      margin-bottom: var(--space-xs);
     }
   }
 }
