--- a/src/App/pages/ListPage/components/Input/Input.module.scss
+++ b/src/App/pages/ListPage/components/Input/Input.module.scss
@@ -11,29 +11,29 @@
   font-size: 16px;
   line-height: 20px;
 
-  padding: $space-s $space-xs;
-  gap: $space-xxs;
+  padding: var(--space-s) var(--space-xs);
+  gap: var(--space-xxs);
 
   width: 100%;
   height: 52px;
-  border-radius: $border-radius;
+  border-radius: var(--border-radius);
 
-  color: $input-text;
-  background-color: $input-bg;
-  border: 1px solid $input-border;
+  color: var(--input-text);
+  background-color: var(--input-bg);
+  border: 1px solid var(--input-border);
   transition: border 0.25s ease-in-out;
 
   &:focus {
     outline: none;
-    color: $input-text-focus;
-    background-color: $input-bg-focus;
-    border: 1px solid $input-border-focus;
+    color: var(--input-text-focus);
+    background-color: var(--input-bg-focus);
+    border: 1px solid var(--input-border-focus);
   }
 
   &:disabled {
-    color: $input-text-disabled;
-    background-color: $input-bg-disabled;
-    border: 1px solid $input-border-disabled;
+    color: var(--input-text-disabled);
+    background-color: var(--input-bg-disabled);
+    border: 1px solid var(--input-border-disabled);
   }
 }
 
@@ -48,13 +48,13 @@
   top: 50%;
   right: 20px;
   transform: translateY(-50%);
-  font-size: $space-l;
-  color: $brand;
+  font-size: var(--space-l);
+  color: var(--brand);
   user-select: none;
   cursor: pointer;
   transition: color 0.25s ease-in-out;
 
   &:hover {
-    color: $brand-hover;
+    color: var(--brand-hover);
   }
 }
