--- a/src/App/pages/ItemPage/components/Contributors/Contributors.module.scss
+++ b/src/App/pages/ItemPage/components/Contributors/Contributors.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   align-items: flex-start;
   flex-direction: column;
-  gap: $space-xxs;
+  gap: var(--space-xxs);
 
   & .title {
     display: flex;
@@ -12,13 +12,13 @@
     font-weight: 600;
     font-size: 18px;
     line-height: 22px;
-    color: $black;
+    color: var(--text-primary);
     position: relative;
 
     & .counts {
       width: 16px;
       height: 16px;
-      background: $gray;
+      background: var(--gray);
       border-radius: 50%;
       display: flex;
       justify-content: center;
@@ -27,14 +27,14 @@
       font-weight: 600;
       font-size: 10px;
       line-height: 10px;
-      color: $text-secondary;
+      color: var(--text-secondary);
     }
   }
 
   & .contributor {
     display: flex;
     align-items: center;
-    gap: $space-xxs;
+    gap: var(--space-xxs);
     text-decoration: none;
 
     & .avatar {
@@ -47,13 +47,13 @@
       font-weight: 600;
       font-size: 16px;
       line-height: 20px;
-      color: $black;
+      color: var(--text-primary);
       transition: color 0.25s ease-in-out;
     }
 
     &:hover {
       & .name {
-        color: $link-color-hover;
+        color: var(--link-color-hover);
       }
     }
   }
