--- a/src/App/pages/ItemPage/components/Topics/Topics.module.scss
+++ b/src/App/pages/ItemPage/components/Topics/Topics.module.scss
@@ -3,14 +3,14 @@
 .topics {
   display: flex;
   flex-wrap: wrap;
-  gap: $space-xxs;
+  gap: var(--space-xxs);
   align-items: center;
 
   & .topic {
     display: flex;
     padding: 4px 16px;
     gap: 10px;
-    background: $topic-bg;
+    background: var(--topic-bg);
     border-radius: 20px;
 
     font-weight: 700;
@@ -19,7 +19,7 @@
     display: flex;
     align-items: center;
     text-align: center;
-    color: $topic-color;
+    color: var(--topic-color);
     transition:
       color 0.25s ease-in-out,
       background-color 0.25s ease-in-out;
@@ -27,8 +27,8 @@
     text-decoration: none;
 
     &:hover {
-      color: $white;
-      background: $topic-bg-hover;
+      color: var(--white);
+      background: var(--topic-bg-hover);
     }
   }
 }
