--- a/src/App/pages/ListPage/components/Card/Card.module.scss
+++ b/src/App/pages/ListPage/components/Card/Card.module.scss
@@ -6,11 +6,11 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 0px 0px $space-xl;
-  gap: $space-xl;
-  background-color: $card-bg;
+  padding: 0px 0px var(--space-xl);
+  gap: var(--space-xl);
+  background-color: var(--card-bg);
   cursor: pointer;
-  border-radius: $border-radius;
+  border-radius: var(--border-radius);
   overflow: hidden;
   transition: box-shadow 0.25s ease-in-out;
 
@@ -21,7 +21,7 @@
   .image {
     width: 348px;
     height: 348px;
-    background-color: $card-image-bg;
+    background-color: var(--card-image-bg);
     object-fit: cover;
   }
 
@@ -29,8 +29,8 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding: 0px $space-xs;
-    gap: $space-l;
+    padding: 0px var(--space-xs);
+    gap: var(--space-l);
   }
 
   & .text {
@@ -39,7 +39,7 @@
     justify-content: center;
     align-items: flex-start;
     padding: 0px;
-    gap: $space-xxs;
+    gap: var(--space-xxs);
   }
 
   & .top {
@@ -47,14 +47,14 @@
     flex-direction: row;
     align-items: center;
     padding: 0px;
-    gap: $space-xl;
+    gap: var(--space-xl);
   }
 
   & .bottom {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: $space-xs;
+    gap: var(--space-xs);
 
     & p {
       -webkit-line-clamp: 3;
@@ -68,7 +68,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: $space-xxs;
+    gap: var(--space-xxs);
   }
 }
 
@@ -79,7 +79,7 @@
     height: auto;
     flex-direction: row;
     min-height: auto;
-    gap: $space-m;
+    gap: var(--space-m);
 
     & .image {
       width: 120px;
@@ -92,14 +92,14 @@
     }
 
     & .content {
-      padding: $space-m;
-      gap: $space-l;
+      padding: var(--space-m);
+      gap: var(--space-l);
     }
 
     & .bottom {
       flex-direction: column;
       align-items: flex-start;
-      gap: $space-xxs;
+      gap: var(--space-xxs);
 
       & p {
         -webkit-line-clamp: 1;
@@ -110,7 +110,7 @@
     }
 
     & .top {
-      gap: $space-xxs;
+      gap: var(--space-xxs);
       order: 2;
     }
   }
