--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -9,27 +9,27 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  padding: $space-s $space-l;
-  gap: $space-xxs;
-  border-radius: $border-radius;
+  padding: var(--space-s) var(--space-l);
+  gap: var(--space-xxs);
+  border-radius: var(--border-radius);
 
-  color: $button-primary-text;
-  background-color: $button-primary-bg;
+  color: var(--button-primary-text);
+  background-color: var(--button-primary-bg);
   transition: background-color 0.25s ease-in-out;
 
   &:not(.loading):not(:disabled):hover {
-    color: $button-primary-text-hover;
-    background-color: $button-primary-bg-hover;
+    color: var(--button-primary-text-hover);
+    background-color: var(--button-primary-bg-hover);
   }
 
   &:disabled {
-    color: $button-primary-text-disabled;
-    background-color: $button-primary-bg-disabled;
+    color: var(--button-primary-text-disabled);
+    background-color: var(--button-primary-bg-disabled);
     cursor: default;
   }
 
   &:active:not(:disabled) {
-    color: $button-primary-text-active;
-    background-color: $button-primary-bg-active;
+    color: var(--button-primary-text-active);
+    background-color: var(--button-primary-bg-active);
   }
 }
