--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -6,8 +6,8 @@
   min-height: 64px;
   display: flex;
   justify-content: center;
-  background-color: $bg-color;
-  border-bottom: 2px solid $gray;
+  background-color: var(--bg-color);
+  border-bottom: 2px solid var(--gray);
 
   & .content {
     display: flex;
@@ -19,13 +19,19 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    gap: $space-xl;
-    color: $text-primary;
+    gap: var(--space-xl);
+    color: var(--text-primary);
     text-decoration: none;
     transition: color 0.25s ease-in-out;
 
     &:hover {
-      color: $text-accent;
+      color: var(--text-accent);
     }
+  }
+
+  & .controls {
+    display: flex;
+    align-items: center;
+    gap: var(--space-m);
   }
 }
