--- a/src/components/Skeleton/Skeleton.module.scss
+++ b/src/components/Skeleton/Skeleton.module.scss
@@ -1,7 +1,7 @@
 @import "styles/variables";
 
 .skeleton {
-  background-color: $gray;
+  background-color: var(--gray);
   animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
 
   &.card {
